Update values of each key's name

--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -35,22 +35,22 @@
         <div class="screen-body-item">
           <div class="app-form">
             <div class="app-form-group">
-              <input class="app-form-control" placeholder="Nome da empresa" name="nome_da_empresa">
+              <input class="app-form-control" placeholder="Nome da empresa" name="empresa">
             </div>
             <div class="app-form-group message">
-              <input class="app-form-control" placeholder="Descrição do serviço" name="descrição_do_serviço">
+              <input class="app-form-control" placeholder="Descrição do serviço" name="descricao">
             </div>
             <div class="app-form-group message">
-              <input class="app-form-control" placeholder="CNPJ" name="CNPJ">
+              <input class="app-form-control" placeholder="CNPJ" name="cnpj">
             </div>
             <div class="app-form-group">
-              <input class="app-form-control" placeholder="Número da nota" name="número_da_nota">
+              <input class="app-form-control" placeholder="Número da nota" name="nota">
             </div>
             <div class="app-form-group">
-              <input class="app-form-control" placeholder="Data e Hora da emissão" name="data_e_hora_da_emissão">
+              <input class="app-form-control" placeholder="Data e Hora da emissão" name="data_emissao">
             </div>
             <div class="app-form-group">
-              <input class="app-form-control" placeholder="Valor da nota R$" name="valor_da_nota">
+              <input class="app-form-control" placeholder="Valor da nota R$" name="valor_nota">
             </div>
             <div class="app-form-group buttons">
               <button class="app-form-button" type="submit">Publicar</button>
