Change from valor_da_nota to nota in phrase Nota fiscal cadastrada com sucesso

--- a/blog/templates/publication_done.html
+++ b/blog/templates/publication_done.html
@@ -25,7 +25,7 @@
       <div class="screen-body">
         <div class="screen-body-item left">
           <div class="app-title">
-            <span>Nota fiscal {{número_da_nota}} cadastrada com Sucesso!</span>
+            <span>Nota fiscal {{nota}} cadastrada com Sucesso!</span>
             <span>Se é Bayer é bom!</span>
           </div>
         </div>
