--- a/blog/templates/index.html
+++ b/blog/templates/index.html
@@ -4,7 +4,7 @@
 <head>
     <link rel="stylesheet" href="{% static 'style.css'%}">
     <title>Programa de Pontuação Impulso Bayer</title>
-
+    <img class="logo" src="{% static 'impulsobayer.png'%}">
 </head>
 <body>
 <form name="publication" action="publication/done" method="post">
